# opencl_practice

./: Cargo.toml  justfile
src/: basic.rs  common.rs  compile.rs  image_compute.rs  main.rs  svm.rs
src/basic/: basic.cl
src/image_compute/: image.cl
src/svm/: svm.cl
