[package]
name = "opencl_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
image = "0.25.0"
opencl3 = { version =  "0.9.5", features = [ "cl_intel_unified_shared_memory" ] }
